ajout du get evemts + Swagger TimeTable
