# TimeTable/api/swagger.json
@@ -49,6 +49,29 @@
                 }
             }
         },
+        "/events": {
+            "get": {
+                "description": "Returns all events.",
+                "tags": [
+                    "events"
+                ],
+                "summary": "Get all events.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Event"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Something went wrong"
+                    }
+                }
+            }
+        },
         "/events/{id}": {
             "get": {
                 "description": "Get a event.",
@@ -110,6 +133,7 @@
                     "type": "string"
                 },
                 "name": {
+                    "description": "Summary",
                     "type": "string"
                 },
                 "start": {
