# TimeTable/cmd/main.go
@@ -19,15 +19,16 @@ func main() {
 	r.Route("/agendas", func(r chi.Router) { // route /agendas
   		r.Route("/{id}/events", func(r chi.Router) { // route /agendas/{id}/events
     		r.Use(agendas.Context)
-    		r.Get("/", events.GetEvents)
+    		r.Get("/", events.GetEventsByAgendaID)
 		})
 	})
 		 
 	r.Route("/events", func(r chi.Router) {// route /events
-		 r.Route("/{id}", func(r chi.Router) { // route /events/{id}
+		 r.Route("/{id}", func(r chi.Router) { // route /events/{id }
 			 r.Use(events.Context) 	  // Use Context method to get event ID
 			 r.Get("/", events.Getevent) // GET /events/{id}
 		 })
+		 r.Get("/", events.GetEvents) // GET /events
 	 })
 
 	if err := helpers.InitNats(); err != nil {
